site/style/main.css
html {
    height: 100%;
}

body {
    font-family: Arial;
    height: 100%;
    margin: 0px;
}

h1, h2 {
    color: #444
}

a {
    color: #A31F34
}

/* Index page: */
.page_content.index > .show_summary {
    background-color: white;
    border: 1px solid #444;
    border-radius: 4px;
}

.page_content.index .summary_slot {
    display: none;
}

#ticket_info {
    margin-top: 1rem;
}

#ticket_table {
    float: none;
    width: 900px;
}

#ticket_table td {
    min-width: inherit;
    max-width: inherit;
}

#ticket_table td.price {
    text-align: right;
}

#ticket_extra {
    margin: 1rem 0;
}

#reservations_link {
    display: inline-block;
    padding: 1rem 1.7rem;
    font-size: 120%;
    text-decoration: none;
    background-color: #A31F34;
    color: lightgray;
    border-radius: 8px;
}

#directions_link {
    display: block;
    margin-top: 1rem;
}
/* end index page */

/* FAQ page */
.page_content.faq h2 {
    font-size: 120%;
}

.page_content.faq p {
    margin-left: 1rem;
}
/* end FAQ page */

/* Contact page */
.page_content.contact #address {
    white-space: pre-line;
    margin-top: -1rem;
}
/* end Contact page

/* Header Stuff: */
#header {
    background-color: #ffcc99;
    border-bottom: 4px solid #444;
}

#header:after {
    content: "";
    display: table;
    clear: both;
}

#header_contents {
    max-width: 1000px;
    margin: auto;
    padding: 0.7rem 0.5rem 0.3rem
}

#header a {
    text-decoration: none;
}

#header .text_link {
    color: #444;
    font-weight: bold;
    margin: 0 0.5rem;
}

#header .text_link:hover {
    text-decoration: underline;
}

#mtglogo {
    width: auto;
    height: 36px;
    margin-right: 1rem;
}

#mitlogo {
    float: right;
    height: 36px;
    width: auto;
}
/* End Header stuff */

.page_content {
    max-width: 1000px;
    margin: 0 auto;
    padding: 1rem;
}

/* banner stuff: */
.show_banner {
    background-color: black;
}

.show_banner > img {
    display: block;
    width: auto;
    height: auto;
    max-width: 100%;
    max-height: 250px;
}
/* end banner stuff */

/* Show header stuff */
#show_header {
    margin-top: 1rem;
    display: flex;
    align-items: flex-start;
}

#show_header > img {
    margin-right: 1rem;
}

#show_header.has_banner > img {
    display: none;
}

section {
    margin: 1rem 0;
}

#title {
    margin-top: 0;
}

#credits {
    white-space: pre-wrap;
    font-weight: 600;
}

.performance_dates {
    font-weight: 600;
}

#reservations {
    margin-top: 0.75rem;
}

#reviews > ul {
    display: inline;
    padding-left: 10px;
}

#reviews > ul > li {
    display: inline;
}

#reviews > ul > li:after {
    content: '\00B7';
    font-weight: 600;
    margin: 0 6px 0 10px;
}

#reviews > ul > li:last-child:after {
    content: ''
}

/* end show header stuff */

/* Table stuff */
.table_container:after {
    content: "";
    display: table;
    clear: both;
}

table {
    float: left;
    border-collapse: collapse;
    margin: 1rem;
    width: 450px;
}

td {
    padding: 0.5rem 0.5rem 0;
    min-width: 150px;
    max-width: 225px;
    vertical-align: top;
    white-space: pre-wrap;
}

td.role {
    text-align: right;
}

td.name {
    font-weight: 600;
}

th {
    text-align: center;
    padding-bottom: 0.5rem;
    border-bottom: 1px solid #8A8B8C;
}
/* end table stuff */

/* production photo stuff */
#photos_container {
    padding: 2rem 5rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.production_photo {
    height: auto;
    width: auto;
    max-height: 130px;
    margin: 0 2px;
}
/* end production photo stuff */

/* Show list stuff */
.show_summary {
    display: flex;
    align-items: flex-start;
    padding: 1rem;
    border-bottom: 1px solid #8A8B8C;
}

.show_summary:last-child {
    border-bottom: none;
}

.show_summary:hover {
    background-color: #EEE
}

.show_summary.current_show {
    border-left: 0.6rem solid #A31F34;
    padding-left: 0.4rem;
}

.summary_graphic >img {
    display: block;
    width: 130px;
    height: auto;
    margin-right: 1rem;
}

.summary_info {
    flex: 1 1 auto;
}

.summary_slot {
    margin-bottom: 0.5rem;
    color: #8A8B8C;
}

.summary_title {
    display: block;
    text-decoration: none;
    color: #A31F34;
    font-size: 150%;
}

.summary_credits {
    white-space: pre-wrap;
    margin: 0.7rem 0 1rem;
}

.summary_performances {
    margin-top: 0.5rem;
    font-size: 90%;
}

.summary_performances > .performance_dates {
    font-weight: 400;
}

.summary_performances > a {
    text-decoration: none;
    color: black;
}

.summary_performances > a:hover {
    color: #A31F34;
    text-decoration: underline;
}
/* end show list stuff */

